stat horas medicas hoy, escala calendario

--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -914,12 +914,15 @@ a:focus {
 footer {
     background: #fff;
     padding: 15px 20px;
-    display: block
+    display: block;
+
 }
 .nav-sm footer {
     margin-left: 70px
+
 }
 .footer_fixed footer {
+
     position: fixed;
     left: 0px;
     bottom: 0px;
@@ -927,7 +930,7 @@ footer {
 }
 @media (min-width: 768px) {
     .footer_fixed footer {
-        margin-left: 0
+        margin-left: 0;
     }
 }
 @media (min-width: 768px) {
